--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -1,6 +1,7 @@
 .course-container{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    /* grid-template-columns: auto; */
+    flex-direction: row;
 }
 
 .course-container img{
