--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -1,9 +1,23 @@
 .course-container{
-    display: flex;
-    /* grid-template-columns: auto; */
-    flex-direction: row;
+    margin-bottom: 10px;
 }
 
 .course-container img{
-    width: 100px;
+    width: 200px;
+    background-color: grey;
+    border-radius: 10px;
+}
+
+.show-btn{
+    border: none;
+    background-color: #3F0071;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    font-weight: bold;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.show-btn:hover{
+    cursor: pointer;
 }
